# MusicPlayer

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/i2s/: CMakelists.txt  play.c  play.h
components/i2stool/: play.c  play.h
components/sd_card/: CMakeLists.txt  Kconfig.projbuild  sd_card.c  sd_card.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  sd_card.h  sd_card_example_main.c
